RESOLVED FIXED51348
Flash plug-in does not work on YouTube video page when accelerated compositing is disabled
https://bugs.webkit.org/show_bug.cgi?id=51348
Summary Flash plug-in does not work on YouTube video page when accelerated compositin...
Anders Carlsson
Reported 2010-12-20 12:55:15 PST
Flash plug-in does not work on YouTube video page when accelerated compositing is disabled
Attachments
Patch (10.21 KB, patch)
2010-12-20 12:57 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2010-12-20 12:55:43 PST
Anders Carlsson
Comment 2 2010-12-20 12:57:25 PST
Anders Carlsson
Comment 3 2010-12-20 13:00:00 PST
Note You need to log in before you can comment on or make changes to this bug.