2010-12-20  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Flash plug-in does not work on YouTube video page when accelerated compositing is disabled
        https://bugs.webkit.org/show_bug.cgi?id=51348
        <rdar://problem/8787667>

        * Platform/CoreIPC/HandleMessage.h:
        (CoreIPC::callMemberFunction):
        Add new overload.

        * PluginProcess/PluginControllerProxy.cpp:
        (WebKit::PluginControllerProxy::create):
        (WebKit::PluginControllerProxy::PluginControllerProxy):
        These now take an additional isAcceleratedCompositingEnabled parameter.

        (WebKit::PluginControllerProxy::isAcceleratedCompositingEnabled):
        Return m_isAcceleratedCompositingEnabled.

        * PluginProcess/PluginControllerProxy.h:
        * PluginProcess/WebProcessConnection.cpp:
        (WebKit::WebProcessConnection::createPlugin):
        This now takes an additional isAcceleratedCompositingEnabled parameter.

        * PluginProcess/WebProcessConnection.messages.in:
        Add isAcceleratedCompositingEnabled parameter to the CreatePlugin message.

        * WebProcess/Plugins/PluginProxy.cpp:
        (WebKit::PluginProxy::initialize):
        Pass isAcceleratedCompositingEnabled when sending the CreatePlugin message.


Canonical link: https://commits.webkit.org/64701@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74359 268f45cc-cd09-0410-ab3c-d52691b4dbfc